--- a/templates/form.html
+++ b/templates/form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Skillbox Chat</title>
+    <title>Simple Web Chat</title>
 
     <!-- Подключение библиотеки jQuery-->
     <script
